--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,82 @@
 @import "bootstrap";
+@import "../fonts/lato";
 
 /*******************
   Project styles
   *******************/
+
+$accent-color: 	#ff0078;
+$dark-grey: 	#222222;
+$off-white: 	#fefefe;
+$light-grey: 	#b6b6b6;
+
+
+
+
+body {
+	font-family: latoregular, "Helvetica Neue", Helvetica, sans-serif, Arial; 
+	text-rendering: optimizeLegibility;
+	font-size: 18px;
+	line-height: 26px;
+	color: $dark-grey;
+	background-color: $off-white;
+	border-left: 70px solid $accent-color;
+	padding: 60px 15px 100px 15px;
+}
+
+.container {
+	margin-left: inherit;
+	margin-right: inherit;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-family: latoblack;
+}
+
+h1 {
+	font-size: 34px;
+	line-height: 34px;
+	margin-top: 0px;
+	margin-bottom: 40px;
+}
+
+header {
+	font-size: 16px;
+	text-transform: uppercase;
+	letter-spacing: 0.2em;
+	margin-bottom: 125px;
+	h1 {
+		font-size: 16px;
+		margin: 0;
+		a {
+			color: $dark-grey;
+		}
+		a:hover {
+			color: $accent-color;
+			text-decoration: none;
+		}
+	}
+}
+
+.spacer {
+	border-top: 5px solid $dark-grey;
+	margin-top: 5px;
+}
+
+nav {
+	a {
+		color: $light-grey;
+		// font-family: latoblack;
+	}
+	a:hover {
+		color: $accent-color;
+		text-decoration: none;
+	}
+}
+
+article {
+	margin-bottom: 100px;
+	p {
+		margin-bottom: 26px;
+	}
+}
